# OOP244

./: README.md
Project/: CMakeLists.txt  CovidPatient.cpp  CovidPatient.h  IOAble.cpp  IOAble.h  Menu.cpp  Menu.h  Patient.cpp  Patient.h  PreTriage.cpp  PreTriage.h  Time.cpp  Time.h  TriagePatient.cpp  TriagePatient.h  data.csv  readme.md  utils.cpp  utils.h
Workshops/WS1/Lab/: File.cpp  File.h  ShoppingList.cpp  ShoppingList.h  ShoppingRec.cpp  ShoppingRec.h  Utils.cpp  Utils.h  shoppingListApp.cpp
Workshops/WS10/lab/: HtmlText.cpp  HtmlText.h  Text.cpp  Text.h  cstring.cpp
Workshops/WS2/DIY/: File.cpp  File.h  Population.cpp  Population.h  cstring.cpp  cstring.h  popReport.cpp
Workshops/WS2/LAB/: Employee.cpp  Employee.h  File.cpp  File.h  cstring.cpp  cstring.h  salReport.cpp
Workshops/WS3/DIY/: CalorieList.cpp  CalorieList.h  Food.cpp  Food.h  cstring.cpp
Workshops/WS3/lab/: Bill.cpp  Bill.h  Item.cpp  Item.h  ItemTester.cpp  billTester.cpp  billTester_prof.cpp  cstring.cpp  cstring.h
Workshops/WS4/DIY/: CMakeLists.txt  Label.cpp  Label.h  LabelMaker.cpp  LabelMaker.h  cstring.cpp  output.txt  w4_tester.cp  w4_tester_prof.cpp
Workshops/WS4/lab/: CMakeList.txt  CMakeLists.txt  Canister.cpp  Canister.h  myCanister
Workshops/WS5/DIY/: CMakeLists.txt  Mark.cpp  Mark.h  Markworks  markMain_prof.cpp  reflect.txt
Workshops/WS5/lab/: Account.cpp  Account.h  output.txt  ws
Workshops/WS6/DIY/: CMakeLists.txt  Stats.cpp  Stats.h  cstring.h  myout.txt  ws
Workshops/WS6/lab/: CMakeLists.txt  TextFile.cpp  TextFile.h  gdb.txt  myout.txt  newout.txt  (+1 more)
(+20 files in other folders)
